[feature] implement laravel passport
Change Log:
- Migrate Laravel to v11.x
- Add Laravel Passport
- Update Swagger documentation
- Create new model user and AuthController
- Create new table
