# app/Models/User.php
@@ -6,7 +6,19 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
-use Laravel\Sanctum\HasApiTokens;
+use Laravel\Passport\HasApiTokens;
+use OpenApi\Annotations as OA;
+
+/**
+ * @OA\Schema(
+ *      description="User model",
+ *      title="User model",
+ *      required={"email", "password"},
+ *      @OA\Xml(
+ *          name="User"
+ *      )
+ * )
+ */
 
 class User extends Authenticatable
 {
