# routes/api.php
@@ -2,6 +2,7 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\API\AuthController;
 use App\Http\Controllers\API\BookController;
 
 /*
@@ -14,9 +15,28 @@ use App\Http\Controllers\API\BookController;
 | be assigned to the "api" middleware group. Make something great!
 |
 */
-// sdasd
-Route::get('/user', function(Request $request) {
-    return $request->user();
-})->middleware('auth:sanctum');
 
-Route::apiResource('books', BookController::class);
+Route::prefix('user')->group(function () {
+    Route::get('/users', function(Request $request) {
+        return $request->user();
+    });
+
+    Route::post('/register', [AuthController::class, 'register']);
+    Route::get('/login', [AuthController::class, 'login'])->name('login');
+    Route::post('/login', [AuthController::class, 'login']);
+    Route::post('/logout', [AuthController::class, 'logout'])->middleware('auth:api');
+});
+
+Route::apiResource('book', BookController::class, [
+    'only' => [
+        'index',
+        'show'
+    ]
+]);
+
+Route::resource('book', BookController::class, [
+    'except' => [
+        'index',
+        'show'
+    ]
+])->middleware(['auth:api']);
